# ros-websocket

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
include/rws/: base64.hpp  client_handler.hpp  connector.hpp  endian.h  generic_action_client.hpp  generic_client.hpp  generic_service.hpp  node_interface.hpp  node_interface_impl.hpp  translate.hpp  typesupport_helpers.hpp
launch/: rws_server_launch.py
src/: client_handler.cpp  generic_action_client.cpp  serdes.cpp  server_node.cpp  translate.cpp  typesupport_helpers.cpp
test/: action_disconnect_test.cpp  client_handler_test.cpp  connector_test.cpp  navigate_and_cancel.py  sleep_disconnect_repro.py  test_durability.py  translate_test.cpp
test/mocks/: node_mock.hpp
