<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rws</name>
  <version>2.1.0</version>
  <description>ROSbridge WebSocket Server</description>
  <maintainer email="karmanyaah.git@malhotra.cc">Karmanyaah Malhotra</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <depend>action_msgs</depend>
  <depend>unique_identifier_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rcl_interfaces</test_depend>
  <test_depend>test_msgs</test_depend>
  <depend>rosidl_typesupport_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
